--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -5,15 +5,31 @@
     version="2.5">
     <servlet>
         <servlet-name>login</servlet-name>
-        <servlet-class>alistirma.LoginServlet</servlet-class>
+        <servlet-class>servlet.LoginServlet</servlet-class>
     </servlet>
+    
+    
+      <servlet>
+        <servlet-name>register</servlet-name>
+        <servlet-class>servlet.RegisterServlet</servlet-class>
+    </servlet>
+    
 
     <servlet-mapping>
         <servlet-name>login</servlet-name>
         <url-pattern>/loginServlet</url-pattern>
     </servlet-mapping>
+    
+   
+    <servlet-mapping>
+        <servlet-name>register</servlet-name>
+        <url-pattern>/registerServlet</url-pattern>
+    </servlet-mapping>
+    
 
     <welcome-file-list>
         <welcome-file>index.jsp</welcome-file>
     </welcome-file-list>
+    
+    
 </web-app>
