--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,8 +1,8 @@
-deploy.ant.properties.file=D:\\Users\\onur.sezer\\AppData\\Roaming\\NetBeans\\8.2\\config\\GlassFishEE6\\Properties\\gfv3-990028317.properties
+deploy.ant.properties.file=D:\\Users\\enes.sahin\\AppData\\Roaming\\NetBeans\\8.2\\config\\GlassFishEE6\\Properties\\gfv3-1965026306.properties
 j2ee.platform.is.jsr109=true
-j2ee.server.domain=D:/Users/onur.sezer/AppData/Roaming/NetBeans/8.2/config/GF_4.1.1/domain1
+j2ee.server.domain=D:/Users/enes.sahin/AppData/Roaming/NetBeans/8.2/config/GF_4.1.1/domain1
 j2ee.server.home=C:/Program Files/glassfish-4.1.1/glassfish
 j2ee.server.instance=[C:\\Program Files\\glassfish-4.1.1\\glassfish;C:\\Program Files\\glassfish-4.1.1\\glassfish\\domains\\domain1]deployer:gfv3ee6wc:localhost:4848
 j2ee.server.middleware=C:/Program Files/glassfish-4.1.1
 selected.browser=Chrome.INTEGRATED
-user.properties.file=D:\\Users\\onur.sezer\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=D:\\Users\\enes.sahin\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
